--- a/shell/android/res/values/donottranslate.xml
+++ b/shell/android/res/values/donottranslate.xml
@@ -7,6 +7,8 @@
     <string name="git_issues">https://github.com/reicast/reicast-emulator/issues/</string>
     <string name="log_url">http://twisted.dyndns.tv:3194/ReicastBot/report/submit.php</string>
 
+    <string name="error_kernel"></string>
+
     <string-array name="depth">
         <item>16</item>
         <item>24</item>
