--- a/shell/android/res/layout/drawer_menu.xml
+++ b/shell/android/res/layout/drawer_menu.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/background" >
+    android:background="@drawable/background"
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,12 +16,12 @@
             android:id="@+id/browser_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical|left"
             android:layout_marginLeft="4dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
             android:focusable="true"
-            android:background="@drawable/game_selector" >
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/browser"
@@ -34,25 +34,25 @@
 
             <TextView
                 android:id="@+id/browser_title"
+                style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-				style="@android:style/TextAppearance.Large"
                 android:text="@string/browser"
-                android:textSize="28dp"
-                android:textAppearance="@style/BaseText" />
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/settings_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical|left"
             android:layout_marginLeft="26dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
             android:focusable="true"
-            android:background="@drawable/game_selector" >
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/config"
@@ -65,25 +65,25 @@
 
             <TextView
                 android:id="@+id/config_title"
+                style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-				style="@android:style/TextAppearance.Large"
                 android:text="@string/settings"
-                android:textSize="28dp"
-                android:textAppearance="@style/BaseText" />
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/paths_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical|left"
             android:layout_marginLeft="4dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
             android:focusable="true"
-            android:background="@drawable/game_selector" >
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/options"
@@ -96,25 +96,25 @@
 
             <TextView
                 android:id="@+id/options_title"
+                style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-				style="@android:style/TextAppearance.Large"
                 android:text="@string/paths"
-                android:textSize="28dp"
-                android:textAppearance="@style/BaseText" />
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/input_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical|left"
             android:layout_marginLeft="26dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
             android:focusable="true"
-            android:background="@drawable/game_selector" >
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/input"
@@ -127,25 +127,25 @@
 
             <TextView
                 android:id="@+id/input_title"
+                style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-				style="@android:style/TextAppearance.Large"
                 android:text="@string/input"
-                android:textSize="28dp"
-                android:textAppearance="@style/BaseText" />
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/about_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical|left"
             android:layout_marginLeft="4dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
             android:focusable="true"
-            android:background="@drawable/game_selector" >
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/about"
@@ -158,25 +158,25 @@
 
             <TextView
                 android:id="@+id/about_title"
+                style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-				style="@android:style/TextAppearance.Large"
                 android:text="@string/about"
-                android:textSize="28dp"
-                android:textAppearance="@style/BaseText" />
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/rateme_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center_vertical|left"
             android:layout_marginLeft="26dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
             android:focusable="true"
-            android:background="@drawable/game_selector" >
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/rate"
@@ -188,13 +188,44 @@
 
             <TextView
                 android:id="@+id/rateme_title"
+                style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-				style="@android:style/TextAppearance.Large"
                 android:text="@string/rateme"
-                android:textSize="28dp"
-                android:textAppearance="@style/BaseText" />
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/message_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
+            android:focusable="true"
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/messages"
+                android:layout_width="52dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:gravity="center_vertical|left"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_launcher" />
+
+            <TextView
+                android:id="@+id/message_title"
+                style="@android:style/TextAppearance.Large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/messages"
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
         </LinearLayout>
     </LinearLayout>
 
