--- a/shell/android/res/values/donottranslate.xml
+++ b/shell/android/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">reicast [LK Edition]</string>
+    <string name="app_name">reicast</string>
 
     <string name="app_site">Homepage: http://reicast.com</string>
     <string name="git_api">https://api.github.com/repos/reicast/reicast-emulator/commits</string>
