--- a/shell/android/res/values/styles.xml
+++ b/shell/android/res/values/styles.xml
@@ -33,7 +33,7 @@
     <style name="fpsOverlayText">
         <item name="android:paddingLeft">4px</item>
         <item name="android:paddingBottom">4px</item>
-        <item name="android:textColor">#ffffffff</item>
+        <item name="android:textColor">#ffff00</item>
         <item name="android:textSize">32sp</item>
         <item name="android:shadowColor">#000000</item>
         <item name="android:shadowDx">1</item>
