--- a/shell/android/res/layout/drawer_menu.xml
+++ b/shell/android/res/layout/drawer_menu.xml
@@ -227,6 +227,37 @@
                 android:textAppearance="@style/BaseText"
                 android:textSize="28dp" />
         </LinearLayout>
+        
+        <LinearLayout
+            android:id="@+id/cloud_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/game_selector"
+            android:focusable="true"
+            android:gravity="center_vertical|left"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/cloud"
+                android:layout_width="52dp"
+                android:layout_height="match_parent"
+                android:layout_margin="2dp"
+                android:gravity="center_vertical|left"
+                android:scaleType="fitCenter"
+                android:src="@drawable/cloud" />
+
+            <TextView
+                android:id="@+id/cloud_title"
+                style="@android:style/TextAppearance.Large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/cloud"
+                android:textAppearance="@style/BaseText"
+                android:textSize="28dp" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
