--- a/shell/android/res/layout/menu_popup_config.xml
+++ b/shell/android/res/layout/menu_popup_config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/menuConfig"
     android:layout_width="match_parent"
@@ -126,4 +126,4 @@
         </TableRow>
     </TableLayout>
 
-</LinearLayout>
+</ScrollView>
